Add an option for configs to return provided keys